logs/Interfaces_0.6.log
>>> 'Pkg.add("Interfaces")' log
INFO: Cloning cache of Interfaces from https://github.com/Rory-Finnegan/Interfaces.jl.git
INFO: Installing Docile v0.5.23
INFO: Installing Interfaces v0.0.4
INFO: Building Interfaces
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c: In function ‘force_union_type’:
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:11:5: error: passing argument 1 of ‘jl_type_union’ from incompatible pointer type [-Werror]
     jl_value_t *u = jl_type_union(types);
     ^
In file included from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.h:4:0,
                 from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:1:
/home/vagrant/julia/bin/../include/julia/julia.h:978:26: note: expected ‘struct jl_value_t **’ but argument is of type ‘struct jl_svec_t *’
 JL_DLLEXPORT jl_value_t *jl_type_union(jl_value_t **ts, size_t n);
                          ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:11:5: error: too few arguments to function ‘jl_type_union’
     jl_value_t *u = jl_type_union(types);
     ^
In file included from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.h:4:0,
                 from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:1:
/home/vagrant/julia/bin/../include/julia/julia.h:978:26: note: declared here
 JL_DLLEXPORT jl_value_t *jl_type_union(jl_value_t **ts, size_t n);
                          ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:21:9: error: passing argument 1 of ‘jl_type_union’ from incompatible pointer type [-Werror]
         jl_uniontype_t *uf = (jl_uniontype_t*) jl_type_union(v);
         ^
In file included from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.h:4:0,
                 from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:1:
/home/vagrant/julia/bin/../include/julia/julia.h:978:26: note: expected ‘struct jl_value_t **’ but argument is of type ‘struct jl_svec_t *’
 JL_DLLEXPORT jl_value_t *jl_type_union(jl_value_t **ts, size_t n);
                          ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:21:9: error: too few arguments to function ‘jl_type_union’
         jl_uniontype_t *uf = (jl_uniontype_t*) jl_type_union(v);
         ^
In file included from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.h:4:0,
                 from /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:1:
/home/vagrant/julia/bin/../include/julia/julia.h:978:26: note: declared here
 JL_DLLEXPORT jl_value_t *jl_type_union(jl_value_t **ts, size_t n);
                          ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:29:11: error: ‘jl_uniontype_t’ has no member named ‘types’
         uf->types = types;
           ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c: In function ‘jl_type_mutable_union_append’:
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:49:9: error: implicit declaration of function ‘jl_svec_append’ [-Werror=implicit-function-declaration]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
         ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:49:53: error: ‘jl_uniontype_t’ has no member named ‘types’
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
                                                     ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:52:30: error: ‘jl_uniontype_t’ has no member named ‘types’
         new_types = new_union->types;  // Get pointer to flattened types.
                              ^
/home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c:54:15: error: ‘jl_uniontype_t’ has no member named ‘types’
         _union->types = new_types;
               ^
cc1: all warnings being treated as errors
=============================[ ERROR: Interfaces ]==============================

LoadError: failed process: Process(`gcc -c -Wall -Werror -fPIC -I/home/vagrant/julia/bin/../include/julia /home/vagrant/.julia/v0.6/Interfaces/deps/src/mutable_union.c -o /home/vagrant/.julia/v0.6/Interfaces/deps/usr/lib/mutable_union.o`, ProcessExited(1)) [1]
while loading /home/vagrant/.julia/v0.6/Interfaces/deps/build.jl, in expression starting on line 13

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: Interfaces had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.6
 - build the package(s) and all dependencies with `Pkg.build("Interfaces")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date — you may not have the latest version of Interfaces
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("Interfaces")' log
Julia Version 0.6.0-pre.alpha.63
Commit 35422b2 (2017-03-06 21:19 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-110-generic #157-Ubuntu SMP Mon Feb 20 11:54:05 UTC 2017 x86_64 x86_64
Memory: 2.9392738342285156 GB (2106.75390625 MB free)
Uptime: 69161.0 sec
Load Avg:  1.14453125  1.04638671875  0.970703125
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3503 MHz    2378716 s       1664 s     224032 s    3854508 s         64 s
#2  3503 MHz     927763 s       4943 s     158701 s    5674286 s          0 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.6
2 required packages:
 - Interfaces                    0.0.4
 - JSON                          0.8.3
6 additional packages:
 - Compat                        0.20.0
 - CompilerTools                 0.2.1
 - DataStructures                0.5.3
 - DocOpt                        0.2.1
 - Docile                        0.5.23
 - ParallelAccelerator           0.2.2              6da2e374 (dirty)
INFO: Testing Interfaces
ERROR: LoadError: LoadError: could not load library "/home/vagrant/.julia/v0.6/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so"
/home/vagrant/.julia/v0.6/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so: cannot open shared object file: No such file or directory
Stacktrace:
 [1] dlopen(::String, ::UInt32) at ./libdl.jl:97 (repeats 2 times)
 [2] include_from_node1(::String) at ./loading.jl:539
 [3] include(::String) at ./sysimg.jl:14
 [4] include_from_node1(::String) at ./loading.jl:539
 [5] include(::String) at ./sysimg.jl:14
 [6] process_options(::Base.JLOptions) at ./client.jl:305
 [7] _start() at ./client.jl:371
while loading /home/vagrant/.julia/v0.6/Interfaces/test/../src/Interfaces.jl, in expression starting on line 8
while loading /home/vagrant/.julia/v0.6/Interfaces/test/runtests.jl, in expression starting on line 1
=============================[ ERROR: Interfaces ]==============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.6/Interfaces/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: Interfaces had test errors

>>> End of log
